@@ -1,0 +1,3 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+uid	query	qclass_name	qtype_name	answers
+CHhAvVGS1DHFjwGM9	fp-de-carrier-vodafone.rcs.telephony.goog	C_INTERNET	NAPTR	NAPTR 100 100 s SIPS+D2T _sips._tcp.fp-de-carrier-vodafone.rcs.telephony.goog
